Docs: added exe instr to readme; feat: Added zip to package

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
       }
     ],
     "win": {
-      "target": ["nsis", "portable"],
+      "target": ["nsis", "portable", "zip"],
       "icon": "frontend/meu_canteiro_front_end/resources/images/tree-icon.ico",
       "artifactName": "${productName}-Setup-${version}.${ext}"
     },
