--- a/backend-node/meu_canteiro_back_end/package.json
+++ b/backend-node/meu_canteiro_back_end/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "express": "^4.19.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
