--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^29.4.6",
-    "electron-builder": "^24.13.3"
+    "electron-builder": "^24.13.3",
+    "jest": "^29.7.0"
   },
   "build": {
     "appId": "com.meu-canteiro-app",
@@ -28,11 +29,18 @@
       {
         "from": "backend",
         "to": "backend",
-        "filter": ["**/*", "!**/__pycache__/*"]
+        "filter": [
+          "**/*",
+          "!**/__pycache__/*"
+        ]
       }
     ],
     "win": {
-      "target": ["nsis", "portable", "zip"],
+      "target": [
+        "nsis",
+        "portable",
+        "zip"
+      ],
       "icon": "frontend/meu_canteiro_front_end/resources/images/tree-icon.ico",
       "artifactName": "${productName}-Setup-${version}.${ext}"
     },
@@ -50,5 +58,9 @@
       "installerSidebar": false,
       "artifactName": "${Meu Canteiro}-Setup-${1.0.0}.${ext}"
     }
+  },
+  "dependencies": {
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   }
 }
