--- a/backend-node/meu_canteiro_back_end/package.json
+++ b/backend-node/meu_canteiro_back_end/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.0",
+    "swagger-jsdoc": "^6.2.8"
   },
   "devDependencies": {
     "jest": "^29.7.0",
