Fix: Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 # Node.js
 node_modules/
 dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+package-lock.json
 
 # macOS
 .DS_Store
@@ -15,6 +13,15 @@ Desktop.ini
 
 # Logs
 *.log
+/logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment files
+.env
+.env.local
+.env.*.local
 
 # Python cache
 __pycache__/
@@ -60,3 +67,12 @@ coverage/
 # database
 *.sqlite
 database.sqlite
+
+# IDE and OS specific
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
+
+# Test coverage
+/coverage
